// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateReplyButton/> render should render a disabled button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 container button ui-button-fill-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <div
        class="logoWrapper"
      >
        <div
          class="logo messengerIcon disabled"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      Message
    </span>
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render a disabled button 2`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 container button ui-button-fill-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <div
        class="logoWrapper"
      >
        <div
          class="logo messengerIcon disabled"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      Message
    </span>
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render the button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 container button ui-button-fill-a432 ui-button-primary-a432"
    type="submit"
  >
    <span
      class="ui-button-content-a432"
    >
      <div
        class="logoWrapper"
      >
        <div
          class="logo messengerIcon"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      Message
    </span>
  </button>
</div>
`;
